--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,7 @@ services:
     restart: unless-stopped
 
   slack-mcp:
+    image: node:18-alpine
     command: npx -y @modelcontextprotocol/server-slack
     environment:
       - SLACK_BOT_TOKEN=${SLACK_BOT_TOKEN}
